--- a/assets/css/modules/_clubs.sass
+++ b/assets/css/modules/_clubs.sass
@@ -50,3 +50,11 @@ section.clubs
       text-shadow: 1px 1px 3px rgba(0,0,0,0.25)
     .hidden
       display: none
+
+@media (max-width: 680px)
+  section.clubs
+    .club-container
+      h4
+        width: 95%
+      p
+        width: 95%
