--- a/assets/css/modules/_diversity.sass
+++ b/assets/css/modules/_diversity.sass
@@ -10,7 +10,7 @@ section.diversity
       width: 20%
   .diversity-blurb
     background: $primary-grey
-    height: 40vw
+    min-height: 40vw
     width: 50vw
     display: flex
     flex-direction: column
@@ -22,7 +22,7 @@ section.diversity
     p
       color: white
       max-width: 620px
-      margin: 0 auto
+      margin: 0 auto 50px
 
 @media (max-width: 800px)
   section.diversity
