--- a/assets/css/modules/_routine.sass
+++ b/assets/css/modules/_routine.sass
@@ -53,7 +53,6 @@ section.routine
     justify-content: center
     div
       border-left: 4px solid $color-green
-      border-top: 4px solid $color-green
       transition: border 200ms ease-in-out
     h4
       padding: 12px
